# axplat_crates

./: CHANGELOG.md  Cargo.toml  README.md  help.html  index.html  search-index.js  settings.html  src-files.js
axplat/: Cargo.toml  README.md  all.html  attr.impl_plat_interface.html  attr.main.html  attr.secondary_main.html  fn.call_main.html  fn.call_secondary_main.html  index.html  macro.assert_str_eq.html  macro.console_print.html  macro.console_println.html
axplat/console/: fn.read_bytes.html  fn.write_bytes.html  index.html  static.CONSOLE_LOCK.html  trait.ConsoleIf.html
axplat/init/: fn.init_early.html  fn.init_early_secondary.html  fn.init_later.html  fn.init_later_secondary.html  index.html  trait.InitIf.html
axplat/irq/: enum.IpiTarget.html  fn.handle.html  fn.register.html  fn.send_ipi.html  fn.set_enable.html  fn.unregister.html  index.html  struct.HandlerTable.html  trait.IrqIf.html  type.IrqHandler.html
axplat/mem/: constant.DEFAULT_MMIO_FLAGS.html  constant.DEFAULT_RAM_FLAGS.html  constant.DEFAULT_RESERVED_FLAGS.html  constant.PAGE_SIZE_4K.html  fn.check_sorted_ranges_overlap.html  fn.mmio_ranges.html  fn.phys_ram_ranges.html  fn.phys_to_virt.html  fn.ranges_difference.html  fn.reserved_phys_ram_ranges.html  fn.total_ram_size.html  fn.virt_to_phys.html  index.html  macro.pa.html  macro.va.html  struct.Aligned4K.html  struct.MemRegionFlags.html  struct.PhysAddr.html  struct.PhysMemRegion.html  struct.VirtAddr.html  trait.MemIf.html  type.OverlapErr.html  type.RawRange.html
axplat/power/: fn.cpu_boot.html  fn.cpu_num.html  fn.system_off.html  (+3 more)
(+255 files in other folders)
