[package]
name = "axplat"
version = "0.3.0"
description = "This crate provides a unified abstraction layer for diverse hardware platforms."
documentation = "https://docs.rs/axplat"
keywords = ["arceos", "os", "hal", "embedded"]
categories = ["embedded", "no-std", "hardware-support", "os"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
smp = ["kspin/smp"]
irq = ["dep:handler_table"]

[dependencies]
kspin = "0.1"
bitflags = "2.11"
const-str = "1.1"
memory_addr = "0.4"
crate_interface = "0.3"
axplat-macros = { workspace = true }
handler_table = { version = "0.1.2", optional = true }

[package.metadata.docs.rs]
all-features = true
